--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-leap-day
+title: Welcome to SolomonZA's homepage!
+description: This is where I'll be playing around with github's features to get used to them.
